aws-vpc-ec2-nginx/ec2.tf
resource "aws_instance" "nginx-server" {
  ami           = "ami-020cba7c55df1f615"
  instance_type = "t2.micro"
  subnet_id     = aws_subnet.public_subnet.id
  vpc_security_group_ids = [aws_security_group.nginx-sg.id]
  associate_public_ip_address = true

    user_data = <<-EOF
                #!/bin/bash
                sudo apt-get update
                sudo apt-get install -y nginx
                sudo systemctl start nginx
                EOF

  tags = {
    Name        = "nginx-server"
    Environment = "Dev"
  }
}
